added Comm Utils,constants,Journal Test, TC17675,TC17679, TC17786,17903

--- a/WinAppTest/pom.xml
+++ b/WinAppTest/pom.xml
@@ -19,30 +19,25 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+
     <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
 	<dependency>
 	    <groupId>io.appium</groupId>
 	    <artifactId>java-client</artifactId>
-	    <version>8.1.1</version>
+	    <version>7.3.0</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 	<dependency>
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
-	    <version>7.6.1</version>
+	    <version>7.5</version>
 	    <scope>test</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 	<dependency>
 	    <groupId>org.seleniumhq.selenium</groupId>
 	    <artifactId>selenium-java</artifactId>
-	    <version>4.3.0</version>
+	    <version>3.141.59</version>
 	</dependency>
 	
     
@@ -68,6 +63,12 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <configuration>
+            <!-- Added for testng.xml file-->
+            	<suiteXmlFiles>
+                    <suiteXmlFile>testng.xml</suiteXmlFile>
+                </suiteXmlFiles>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
